--- a/css/style2.css
+++ b/css/style2.css
@@ -1,5 +1,5 @@
 header{
-	background: url(../img/header.png);
+	background: url(../img/Rectangle_1.png);
 	width: 1440px;
 	height: 570px;
 }
@@ -12,7 +12,7 @@ body{
 }
 .nav{
 	display: flex;
-	margin-left: 350px;
+	margin-left: 400px;
 	margin-top: -110px;
 }
 .nav a{
@@ -22,8 +22,11 @@ body{
 	margin-left: 40px;
 	font-family: 'Rubik', sans-serif;
 }
-.nav a:nth-child(1){
+.nav a:nth-child(2){
 	color: #ffff66;
+}
+.relative{
+	position: relative;
 }
 .test{
 	border: solid #ffff66;
@@ -58,6 +61,13 @@ footer{
 .flex{
 	display: flex;
 }
+.green1{
+	color: #7B9962;
+}
+.yellow1{
+	color: #C0B912;
+
+}
 .flex > div p{
 	color: #339966;
 	font-family: 'Rubik', sans-serif;
@@ -71,4 +81,95 @@ footer{
 }
 .footer_nav img{
 	margin-left: 30px;
+}
+main{
+	margin-top: -55px;
+	width: 1150px;
+	margin-left: 140px;
+	box-shadow: -1px 1px 8px 0px rgba(34, 60, 80, 0.2);
+	margin-bottom: 50px;
+}
+.ecoproblems h2{
+	font-size: 56px;
+	text-align: center;
+	font-family: 'Rubik', sans-serif;
+	padding-top: 150px;
+}
+.ecoproblems p{
+	font-size: 22px;
+	width: 900px;
+	margin: 0 auto;
+	font-family: 'Rubik', sans-serif;
+	text-align: center;
+}
+.problems{
+	margin-top: 150px;
+}
+.problem1{
+	display: flex;
+}
+.problem1 h3{
+	font-family: 'Rubik', sans-serif;
+	font-size: 40px;
+	margin-top: 120px;
+}
+.problem1 p{
+	font-family: 'Rubik', sans-serif;
+	font-size: 25px;
+	width: 700px;
+}
+.problem1:nth-child(2){
+	margin-left: 50px;
+}
+.fact1{
+	margin-left: 50px;
+}
+.fact2{
+	margin-left: 250px;
+}
+.facts{
+	display: flex;
+}
+.fact1 > div p, h3{
+	font-family: 'Rubik', sans-serif;
+}
+.fact1 > div p{
+	width: 400px;
+	font-size: 26px;
+}
+.fact1 > div h3{
+	width: 400px;
+	font-size: 36px;
+}
+.fact1_text{
+	width: 280px !important;
+}
+.fact2 > div p, h3{
+	font-family: 'Rubik', sans-serif;
+}
+.fact2 > div p{
+	width: 400px;
+	font-size: 26px;
+}
+.fact2 > div h3{
+	width: 400px;
+	font-size: 36px;
+}
+.fact1_text{
+	width: 280px !important;
+}
+.fact2 p{
+	text-align: right;
+}
+.fact2 h3{
+	text-align: right;
+}
+.fact_img{
+	position: absolute;
+	width: 400px;
+	top: -490px;
+	left: 350px;
+}
+.fact3{
+	transform: translateY(30px);
 }
